--- a/app/src/main/res/layout/app_list_view.xml
+++ b/app/src/main/res/layout/app_list_view.xml
@@ -1,22 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <ImageView
+        android:id="@+id/icon1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        >
     <TextView
         android:id="@+id/element"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="10dp"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:textSize="20dp"
         android:layout_gravity="center"
         android:textColor="#000"/>
 
     <TextView
         android:id="@+id/element1"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:padding="10dp"
+        android:layout_height="wrap_content"
+        android:padding="5dp"
+        android:textSize="15dp"
+        android:layout_gravity="center"
+        android:textColor="#000"/>
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/element2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25dp"
+        android:layout_marginRight="20dp"
+        android:gravity="right"
         android:layout_gravity="center"
         android:textColor="#000"/>
 
