--- a/app/src/main/res/layout/app_list_view.xml
+++ b/app/src/main/res/layout/app_list_view.xml
@@ -2,62 +2,79 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="5dp">
+    >
 
-    <ImageView
-        android:id="@+id/icon1"
-        android:layout_width="45dp"
-        android:layout_height="45dp"
-        android:padding="9dp"
-        android:layout_marginLeft="5dp"
-        android:layout_gravity="center"
-        />
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginLeft="5dp"
-        >
-    <TextView
-        android:id="@+id/element"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/mainCard"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        android:textSize="18dp"
-        android:layout_gravity="center"
-        android:textColor="#000"/>
-
-     <LinearLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Last Time Used: "
-            android:padding="5dp"
-            android:textSize="13dp"
-            />
-
-        <TextView
-            android:id="@+id/element1"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="6dp"
+        >
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="13dp"
+            android:padding="4dp"
+            android:gravity="center"
+            android:layout_margin="5dp">
+
+        <ImageView
+            android:id="@+id/icon1"
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:padding="9dp"
+            android:layout_marginLeft="5dp"
+            />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="5dp"
+            >
+            <TextView
+                android:id="@+id/element"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="5dp"
+                android:textSize="18dp"
+                android:layout_gravity="center"
+                android:textColor="#000"/>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Last Time Used: "
+                    android:padding="5dp"
+                    android:textSize="13dp"
+                    />
+
+                <TextView
+                    android:id="@+id/element1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="13dp"
+                    android:layout_gravity="center"
+                    android:textColor="#000"/>
+            </LinearLayout>
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/element2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="22dp"
+            android:layout_marginRight="20dp"
+            android:gravity="right"
             android:layout_gravity="center"
             android:textColor="#000"/>
-     </LinearLayout>
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
+
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/element2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="22dp"
-        android:layout_marginRight="20dp"
-        android:gravity="right"
-        android:layout_gravity="center"
-        android:textColor="#000"/>
-
-
-</LinearLayout>
