--- a/app/src/main/res/layout/app_list_view.xml
+++ b/app/src/main/res/layout/app_list_view.xml
@@ -17,13 +17,13 @@
             android:layout_height="wrap_content"
             android:padding="4dp"
             android:gravity="center"
-            android:layout_margin="5dp">
+            android:layout_margin="3dp">
 
         <ImageView
             android:id="@+id/icon1"
-            android:layout_width="45dp"
-            android:layout_height="45dp"
-            android:padding="9dp"
+            android:layout_width="42dp"
+            android:layout_height="42dp"
+            android:padding="4dp"
             android:layout_marginLeft="5dp"
             />
 
@@ -50,28 +50,33 @@
                     android:layout_height="wrap_content"
                     android:text="Last Time Used: "
                     android:padding="5dp"
-                    android:textSize="13dp"
+                    android:textSize="10dp"
                     />
 
                 <TextView
                     android:id="@+id/element1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textSize="13dp"
+                    android:textSize="10dp"
                     android:layout_gravity="center"
                     android:textColor="#000"/>
             </LinearLayout>
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/element2"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="22dp"
+            android:gravity="right">
+        <TextView
+            android:id="@+id/element2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17dp"
             android:layout_marginRight="20dp"
-            android:gravity="right"
-            android:layout_gravity="center"
-            android:textColor="#000"/>
+            android:gravity="center"
+            android:layout_gravity="center_vertical"
+            android:background="@drawable/circleshape"
+            android:textColor="#fff"/>
+        </LinearLayout>
         </LinearLayout>
 
     </androidx.cardview.widget.CardView>
